--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "nanoid": "^5.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-redux": "^9.1.2",
+    "react-router": "^6.28.0",
+    "react-router-dom": "^6.28.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "toolkit": "^1.5.4",
